kubernetes/workloads/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbit-service
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: web-ui
      port: 8080
      targetPort: webui
