kubernetes/workloads/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: torrent.nverk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbit-service
                port:
                  name: web-ui
    - host: qbit.nverk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbit-service
                port:
                  name: web-ui
